# meeno-app

./: .gitignore  Makefile  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsup.config.ts  vite.config.ts
.github/workflows/: release.yml
docs/: config.yaml
docs/content.en/: _index.md
docs/content.en/docs/release-notes/: _index.md
public/assets/fonts/icons/: iconfont.js
src/: main.css  main.tsx  web.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: autostart.rs  lib.rs  settings.rs  shortcut.rs
src-tauri/src/assistant/: mod.rs
src-tauri/src/common/: assistant.rs  connector.rs  datasource.rs  document.rs  error.rs  http.rs  mod.rs  profile.rs  register.rs  search.rs  server.rs  traits.rs
src-tauri/src/local/: calculator.rs  mod.rs
src-tauri/src/local/application/: mod.rs  with_feature.rs  without_feature.rs
src-tauri/src/search/: mod.rs
src-tauri/src/server/: attachment.rs  auth.rs  connector.rs  datasource.rs  http_client.rs  mod.rs  profile.rs  search.rs  servers.rs  system_settings.rs  transcription.rs  websocket.rs
src-tauri/src/setup/: mac.rs  mod.rs  windows.rs
src-tauri/src/util/: mod.rs
src/api/: axiosRequest.ts  tauriFetchClient.ts  tools.ts
src/commands/: index.ts  servers.ts  system.ts
src/components/Assistant/: AssistantList.tsx  Chat.tsx  ChatContent.tsx  ChatHeader.tsx  ChatSidebar.tsx  ConnectPrompt.tsx  FileList.tsx  Greetings.tsx  ReadAloud.tsx  ServerList.tsx  SessionFile.tsx  Sidebar.tsx  Splash.tsx
src/components/AudioRecording/: index.tsx
src/components/ChatMessage/: CallTools.tsx  DeepRead.tsx  FetchSource.tsx  Markdown.tsx  PickSource.tsx  PrevSuggestion.tsx  QueryIntent.tsx  Think.tsx  UserMessage.tsx  index.tsx  markdown.scss
src/components/Cloud/: Cloud.tsx  Connect.tsx  DataSourceItem.tsx  DataSourcesList.tsx  ServiceAuth.tsx  ServiceBanner.tsx  ServiceHeader.tsx  ServiceInfo.tsx  ServiceMetadata.tsx  Sidebar.tsx  StatusIndicator.tsx  UserProfile.tsx
src/components/Common/: ChatSwitch.tsx  ErrorBoundary.tsx  ErrorDisplay.tsx  NoDataImage.tsx  PopoverInput.tsx  VisibleKey.tsx
src/components/Common/Checkbox/: index.tsx
src/components/Common/CopyButton/: index.tsx
src/components/Common/Copyright/: index.tsx
src/components/Common/ErrorNotification/: ErrorSearch.tsx  index.tsx
src/components/Common/HistoryList/: index.tsx
src/components/ProjectMap/: ContextMenu.tsx  FloatingConnectionLine.tsx  FloatingEdge.tsx  FlowContent.tsx  NodeDetailsSidebar.tsx  SimpleFloatingEdge.tsx  index.tsx  utils.tsx
src/components/Search/: AiSummary.tsx  AutoResizeTextarea.tsx  Calculator.tsx  ChatIcons.tsx  ConnectionError.tsx  ContextMenu.tsx  DocumentDetail.tsx  DocumentList.tsx  DropdownList.tsx  InputBox.tsx  InputExtra.tsx  ListRight.tsx  MCPPopover.tsx  Search.tsx  SearchHeader.tsx  SearchIcons.tsx  SearchListItem.tsx  SearchPopover.tsx  SearchResults.tsx
src/components/SearchChat/: index.tsx
src/components/Settings/: AdvancedSettings.tsx  GeneralSettings.tsx  SettingsInput.tsx  SettingsItem.tsx
src/components/UpdateApp/: index.tsx
src/constants/: index.ts
src/hooks/: useChatActions.ts  useChatScroll.ts  useClickAway.ts  useEscape.ts  useFeatureControl.ts  useFindConnectorIcon.ts  useIsMobile.ts  useMessageChunkData.ts  useMessageHandler.ts  useModifierKeyPress.ts  useScript.ts  useSettingsWindow.ts  useShortcutEditor.ts  useSyncStore.ts  useTray.ts  useViewportHeight.ts  useWebSocket.ts  useWindowEvents.ts  useWindows.ts
src/locales/en/: translation.json
src/locales/zh/: translation.json
src/pages/chat/: index.tsx
src/pages/error/: index.tsx
src/pages/main/: index.tsx
src/pages/settings/: index.tsx
src/pages/web/: README.md  index.tsx
src/reducers/: appReducer.ts
src/routes/: index.tsx  layout.tsx
src/stores/: appStore.ts  appearanceStore.ts  authStore.ts  chatStore.ts  connectStore.ts  searchStore.ts  shortcutsStore.ts  startupStore.ts  themeStore.ts  updateStore.ts
src/types/: chat.ts  commands.ts  index.ts  platform.ts  server.ts
src/utils/: index.ts  keyboardUtils.ts  platform.ts  platformAdapter.ts  tauriAdapter.ts  webAdapter.ts
src/utils/wrappers/: tauriWrappers.ts
(+23 files in other folders)
